@@ -552,11 +552,20 @@
                             <include content="Object_VideoInfo_InfoSection">
                                 <param name="label" value="$LOCALIZE[572]" />
                                 <param name="label2" value="ListItem.Studio" />
+                                <param name="label3" value="$INFO[ListItem.Country,(,)]" />
                             </include>
                             <include content="Object_VideoInfo_InfoSection">
+                                <param name="label" value="$LOCALIZE[20459]" />
+                                <param name="label2" value="ListItem.Tag" />
+                            </include>
+                            <include content="Object_VideoInfo_InfoSection">
+                                <param name="label" value="$LOCALIZE[20141]" />
+                                <param name="label2" value="ListItem.Set" />
+                            </include>
+                            <!-- <include content="Object_VideoInfo_InfoSection">
                                 <param name="label" value="$LOCALIZE[574]" />
                                 <param name="label2" value="ListItem.Country" />
-                            </include>
+                            </include> -->
                             <include content="Object_VideoInfo_InfoSection">
                                 <param name="label" value="$LOCALIZE[20417]" />
                                 <param name="label2" value="ListItem.Writer" />
