@@ -1,5 +1,6 @@
 [B]0.9.31[/B]
-Add support for Atmos and DTS-X flags based on filename
+CODECFLAGS - Add support for Atmos and DTS-X flags based on filename
+DIALOGVIDEOINFO - Add tags and set information
 
 [B]0.9.30[/B]
 WIDGETS - Fix for square widgets
